
Changelog
=========

1.0.24 (unreleased)
-------------------

- Adds shading (avilability indicator) to the calendar legend. Fixes #154.
  [href]

1.0.23 (2014-06-23)
-------------------

- Adds unicode check/cross marks for approve/deny/revoke, to increase legibility.
  [href]

- Adds thank-you page shown after submitting a reservation. Each resource
  may have a custom text which is shown under the thank you note. Closes #138.
  [href]

- Refetch less agressively to make the interface 'calmer'. Only actions by
  the user which change something trigger a refresh now. Clicking on the
  cancel button of an overlay for example won't reload the events anymore.
  [href]

- The date is now correctly localized in all the views as well as the calendar.
  Fixes #142.
  [href]

- Renames "Reservation Quota" (eng) to "Number of Reservations". Fixes #143.
  [href]

- Availability partitions are now more visible. Fixes #149.
  [href]

- Allocations which are not completely displayed on the calendar now show
  correct availability partitions. Fixes #145.
  [href]

- Correctly handles partly-available whole-day allocations. Fixes #129.
  [href]

- No longer raise an exception to the user if a nonexistant reservation is
  removed from 'your reservations'. Fixes #123.
  [href]

1.0.22 (2014-06-05)
-------------------

- Adds new reservation-assistant role which may view but not edit submitted
  reservation data.
  [href]

- Fixes overlay js failing if loaded after jquery tools.
  [href]

- Slims down the session handling code.
  [href]

1.0.21 (2014-03-26)
-------------------

- The messages shown when reserving/confirming a reservation have been
  reworked to be more informative.
  [href]

- If an overlay fails to load the remote address after a click, an error
  is shown.
  [href]

- Email addresses are now verified and stored without leading or trailing
  space. Fixes #127.
  [href]

- Shows an error when displaying or submitting the reservation confirm form, if